--- a/src/eni/seis/theme/theme-south/src/less/layout/global.less
+++ b/src/eni/seis/theme/theme-south/src/less/layout/global.less
@@ -247,7 +247,7 @@ body {
   dd {
     margin: 0;
   }
-  text-align: initial;
+  text-align: left;
 }
 
 aside.page-aside div,
