--- a/src/eni/seis/theme/theme-south/src/less/layout/navbar.less
+++ b/src/eni/seis/theme/theme-south/src/less/layout/navbar.less
@@ -361,7 +361,7 @@
 }
 
 ul.submenu {
-  text-align: initial;
+  text-align: left;
 }
 
 .submenu.navTree {
