--- a/src/eni/seis/theme/theme-south/src/less/south.less
+++ b/src/eni/seis/theme/theme-south/src/less/south.less
@@ -552,7 +552,7 @@ body.template-country_view {
 }
 
 body.template-atct_edit #content {
-  text-align: initial;
+  text-align: left;
 }
 body.template-atct_edit #content > div:first-of-type {
   text-align: center;
